# 1_laba

lab1_1/lab1/: CMakeLists.txt  main.cpp
lab1_2/: CMakeLists.txt  main.cpp
lab1_2/include/: Rectangle.h  Shape.h  ShapeType.h  Square.h
lab1_2/src/: Keeper.cpp  Shape.cpp  ShapeType.cpp
lab1_3/: CMakeLists.txt  data.txt  main.cpp
lab1_3/include/: Circle.h  Cube.h  Keeper.h  Parallelepiped.h  Shape.h  Shape2D.h  Shape3D.h  ShapeType.h  Sphere.h
lab1_3/src/: Circle.cpp  Cube.cpp  Keeper.cpp  Parallelepiped.cpp  Rectangle.cpp  ShapeType.cpp  Sphere.cpp  Square.cpp
